Feature: Added Pagination, Search and Sorting for products